# PresidentFlash

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  TRACKING.md  pyproject.toml
src/: data.py  game_logic.py  init_db.py  main.py
templates/: index.html
tests/: test_game.py
