[project]
name = "presidentflash"
version = "0.1.0"
description = "US President Flashcard Game"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "pydantic-settings",
    "loguru",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "httpx"
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
